--- a/my-app/src/templates/statistic/static.module.css
+++ b/my-app/src/templates/statistic/static.module.css
@@ -4,6 +4,11 @@
   background: #dfdfe5;
   box-shadow: 4px 5px 20px black;
   margin: 0 auto;
+  display: table;
+}
+.title {
+  justify-content: center;
+  display: flex;
 }
 .statList {
   display: flex;
